--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>E-Commerce Coder</title>
+  <link rel="icon" href="/img/favicon-32x32.png" type="image/x-icon" />
+  <title>VirtualStore</title>
 </head>
 
 <body>
